--- a/MyCity4Kids/MyCity4Kids/res/layout/article_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_listing_activity.xml
@@ -41,20 +41,6 @@
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
 
-            <!--<ImageView-->
-            <!--android:id="@+id/downArrowImageView"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:layout_toEndOf="@+id/toolbarTitle"-->
-            <!--android:layout_toRightOf="@+id/toolbarTitle"-->
-            <!--android:paddingBottom="15dp"-->
-            <!--android:paddingLeft="10dp"-->
-            <!--android:paddingRight="10dp"-->
-            <!--android:paddingTop="15dp"-->
-            <!--android:src="@drawable/arrow_bluexxhdpidown"-->
-            <!--android:tint="#507cbe" />-->
-
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
@@ -64,22 +50,6 @@
         android:layout_height="1dp"
         android:layout_below="@+id/toolbar"
         android:background="@color/light_underline" />
-
-    <!--<android.support.v4.widget.SwipeRefreshLayout-->
-    <!--android:id="@+id/swipe_refresh_layout"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/toolbarUnderline">-->
-
-    <!--<com.mycity4kids.observablescrollview.ObservableListView-->
-    <!--android:id="@+id/scroll"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_below="@+id/toolbar"-->
-    <!--android:background="@color/white"-->
-    <!--android:divider="@color/transparent"-->
-    <!--android:drawSelectorOnTop="true" />-->
-    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -143,5 +113,12 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:visibility="invisible" />
+
+    <include
+        layout="@layout/trending_list_header_item"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbarUnderline"
+        android:visibility="gone" />
 
 </RelativeLayout>
