--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_articles_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_articles_tab_fragment.xml
@@ -44,13 +44,13 @@
     </RelativeLayout>
 
     <!--<com.mycity4kids.observablescrollview.ObservableListView-->
-        <!--android:id="@+id/scroll"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_below="@+id/headerRL"-->
-        <!--android:background="@color/grey_light"-->
-        <!--android:divider="@color/transparent"-->
-        <!--android:drawSelectorOnTop="true" />-->
+    <!--android:id="@+id/scroll"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_below="@+id/headerRL"-->
+    <!--android:background="@color/grey_light"-->
+    <!--android:divider="@color/transparent"-->
+    <!--android:drawSelectorOnTop="true" />-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -173,4 +173,73 @@
         app:fab_colorNormal="@color/fab.white"
         app:fab_colorPressed="@color/fab.white"
         app:fab_icon="@drawable/ic_flip" />
+
+    <RelativeLayout
+        android:id="@+id/guideOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/dark_transparent"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:id="@+id/guideflContainerLL"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="2dp"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/guideExpandImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_alignBottom="@+id/guideflContainerLL"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:src="@drawable/ic_more"
+            android:tint="@color/white"
+            android:visibility="visible" />
+
+        <View
+            android:id="@+id/horizontalLine"
+            android:layout_width="30dp"
+            android:layout_height="2dp"
+            android:layout_alignBottom="@+id/guideflContainerLL"
+            android:layout_alignLeft="@+id/guideExpandImageView"
+            android:layout_alignRight="@+id/guideExpandImageView"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/white" />
+
+        <View
+            android:id="@+id/verticalLine_1"
+            android:layout_width="2dp"
+            android:layout_height="20dp"
+            android:layout_alignLeft="@+id/horizontalLine"
+            android:layout_alignTop="@+id/horizontalLine"
+            android:layout_marginLeft="12dp"
+            android:background="@color/white" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/tabGuideTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/verticalLine_1"
+            android:layout_marginRight="10dp"
+            android:background="@color/white"
+            android:paddingBottom="7dp"
+            android:paddingLeft="9dp"
+            android:paddingRight="9dp"
+            android:paddingTop="7dp"
+            android:text="@string/guide.sub_topics_list_tour"
+            android:textColor="@color/black"
+            app:fontName="oswald.ttf" />
+
+    </RelativeLayout>
 </RelativeLayout>
