--- a/MyCity4Kids/MyCity4Kids/res/layout/trending_list_header_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/trending_list_header_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/addTopicsLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -32,6 +33,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
                     android:src="@drawable/ic_lanuage_circle" />
 
                 <com.mycity4kids.widget.CustomFontTextView
