--- a/MyCity4Kids/MyCity4Kids/res/layout/language_selection_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/language_selection_activity.xml
@@ -163,8 +163,8 @@
                     android:id="@+id/okayTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/selectMoreTextView"
                     android:paddingBottom="10dp"
                     android:paddingLeft="23dp"
                     android:paddingRight="23dp"
