--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_articles_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_articles_tab_fragment.xml
@@ -67,6 +67,64 @@
         android:visibility="gone" />
 
     <RelativeLayout
+        android:id="@+id/writeArticleCell"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/headerRL"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/topics_border_bg"
+        android:visibility="gone">
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/firstLabelTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/no_article.be_first"
+            android:textSize="16sp"
+            app:fontName="oswald.ttf" />
+
+        <ImageView
+            android:id="@+id/firstImageView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/article_listing.article_image"
+            android:layout_below="@+id/firstLabelTextView"
+            android:scaleType="fitXY"
+            android:src="@drawable/be_first" />
+
+
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/profilePicImageView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/firstImageView"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/ic_launcher"
+            app:civ_border="true"
+            app:civ_border_color="@color/white_color"
+            app:civ_border_width="0dp"
+            app:civ_shadow="true"
+            app:civ_shadow_color="@color/grey"
+            app:civ_shadow_radius="4" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/momspressoLabelTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/firstImageView"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@+id/profilePicImageView"
+            android:text="@string/app_name"
+            app:fontName="oswald.ttf" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/relativeLoadingView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
